# ComputeSqrt

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  ComputeSqrtOf42.sln  New Text Document.txt  README.md  generate.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
ComputeSqrtOf42/: ComputeSqrtOf42.cpp  ComputeSqrtOf42.vcxproj  ComputeSqrtOf42.vcxproj.filters
src/: ComputeSqrtOf42.cpp  generator.hpp  large_integer.cpp  large_integer.h  large_integer.hpp  large_unsigned_integer.cpp  large_unsigned_integer.hpp  main.cpp  spsc_queue.hpp  square_root.cpp  square_root.hpp  todo.md  utility.hpp
src/test/: generator_test.cpp  large_integer_test.cpp  large_unsigned_integer_test.cpp  spsc_queue_test.cpp  square_root_test.cpp
